# artincam

./: .gitignore  README.md  bluetooth_setup.sh  init_pi.sh  install.sh  rpi_backend_service.sh  rpi_camera_piagent_install.sh  rpi_full_install.sh  rpi_install.sh  rpi_mediamtx_install.sh  rpi_update_fe_app.sh
artincam-be/: Makefile  README.md  go.mod  go.sum  sqlc.yaml
artincam-fe/: Makefile  biome.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
camera/: README.md  config.json  logger.txt  main.py  preview.py  pyproject.toml  requirements.txt
camera/artincam/: README.md  agent.py  backend_service.py  camera.py  constants.py  healer.py  hello.py  logger.py  main.py  schemas.py
camera/artincam/config/: config.json  config_schema.json  mediamtx.yml
camera/artincam/mocks/: libcamera.py  picamera2.py
camera/setup/: artincam.service  artincam_service
camera/support/: change_location.sh  change_pi_id.sh  edit_config.py  helper_transfer.py  show_config.py  transfer_file.py  transfer_files.py  transfer_files.sh  update_config.py  validate_config.py
cronjobs/: README.md  crontab
install_scripts/: 00-preflight.sh  10-system-prereqs.sh  20-go.sh  30-backend.sh  40-python-agent.sh  50-node-frontend.sh  60-nginx.sh  70-mediamtx.sh  80-services.sh  90-deploy-frontend.sh  95-install-update-scripts.sh  96-install-pull-update-scripts.sh  lib.sh
kerberos/: .env  Makefile  README.md  config.json  docker-compose.yaml  kerberos-setup.sh
mediamtx/: README.md  mediamtx-setup.sh  (+1 more)
(+194 files in other folders)
