[project]
name = "artincam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["colorama>=0.4.6", "jsonschema>=4.23.0"]

[dependency-groups]
dev = ["isort>=6.0.1", "ruff>=0.11.2"]

[tool.ruff]
line-length = 120

[tool.uv]
python-preferences = "only-system"
