[project]
name = "artincam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "jsonschema>=4.23.0",
    "keyboard>=0.13.5",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "psutil>=7.0.0",
]

[project.optional-dependencies]
local-dev = ["picamera2>=0.3.25"]

[dependency-groups]
dev = ["isort>=6.0.1", "ruff>=0.11.2"]

[tool.ruff]
line-length = 120

[tool.uv]
python-preference = "only-system"
